--- a/molecule/filter-plugin-clone/converge.yml
+++ b/molecule/filter-plugin-clone/converge.yml
@@ -2,6 +2,8 @@
 - name: Converge
   hosts: all
   gather_facts: false
+  collections:
+    - confluent.platform
   roles:
     - role: variables
   tasks:
